# NJU_IAP

./: .gitignore  README.md  api.py  articles.csv  crawler.py  five_educations.py  main.py  mooc.py  nju_news.py  put_pic_together.py  pyproject.toml  robot.py  test.py  xxt.py
output/text/: text_1.txt  text_10.txt  text_2.txt  text_3.txt  text_4.txt  text_5.txt  text_6.txt  text_7.txt  text_8.txt  text_9.txt
