[project]
name = "information"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "curl-cffi>=0.10.0",
    "openai>=1.72.0",
    "pillow>=11.2.0",
    "playwright>=1.51.0",
    "requests>=2.32.3",
]
